add registration with tokens

--- a/templates/register.html
+++ b/templates/register.html
@@ -95,6 +95,9 @@
             <label for="password2">Повторите пароль:</label>
             <input type="password" id="password2" name="password2" required>
 
+            <label for="token">Токен:</label>
+            <input type="text" id="token" name="token" required>
+
             <button type="submit">Зарегистрироваться</button>
         </form>
     </div>
