--- a/templates/admin.html
+++ b/templates/admin.html
@@ -63,6 +63,7 @@
     </style>
 </head>
 <a href="{{ url_for('give_take_files') }}">Files</a>
+<a href="{{ url_for('show_logs') }}">Logs</a>
 <a href="{{ url_for('main')}}"> Main </a>
 <body>
     <div class="container">
