--- a/templates/trening_type.html
+++ b/templates/trening_type.html
@@ -50,6 +50,8 @@
     <div style="width: 800px; height: 400px;">
         <canvas id="combinedChart"></canvas>
     </div>
+Лучший подход по весу: вес = {{max_weight_attempt[0]}} на количество раз {{max_weight_attempt[1]}}</br>
+Лучший подход по количеству: вес = {{max_amount_attempt[0]}} на количество раз {{max_amount_attempt[1]}}
 
     <script>
         // Данные, которые передаются из Python
@@ -133,7 +135,7 @@
                     tooltip: {
                         callbacks: {
                             title: (context) => {
-                                return new Date(context[0].raw.x).toLocaleDateString();
+                                 return `День занятий ${context[0].dataIndex + 1}`;
                             }
                         }
                     },
