--- a/templates/admin.html
+++ b/templates/admin.html
@@ -65,6 +65,7 @@
 <a href="{{ url_for('give_take_files') }}">Files</a>
 <a href="{{ url_for('show_logs') }}">Logs</a>
 <a href="{{ url_for('main')}}"> Main </a>
+<a href="{{ url_for('password_change')}}"> Main </a>
 <body>
     <div class="container">
         <h1>🔑 Админ-панель</h1>
